--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -44,7 +44,6 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2639,6 +2638,136 @@
     "* The BETWEEN operator selects values within a given range. The values can be numbers, text, or dates.\n",
     "* The BETWEEN operator is inclusive: begin and end values are included. \n",
     "* NOT can be included before to give the opposite result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9788a4cf-bb2e-416e-aa0c-50596af18e1a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1141. User Activity for the Past 30 days I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f24e368c-8168-4829-91e7-98364e0a720b",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ace83f8-8a89-43d3-a30e-cc451a49611e",
+   "metadata": {},
+   "source": [
+    "Table: Activity\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | user_id       | int     |\n",
+    "    | session_id    | int     |\n",
+    "    | activity_date | date    |\n",
+    "    | activity_type | enum    |\n",
+    "    +---------------+---------+\n",
+    "This table may have duplicate rows.\n",
+    "The activity_type column is an ENUM (category) of type ('open_session', 'end_session', 'scroll_down', 'send_message').\n",
+    "The table shows the user activities for a social media website. \n",
+    "Note that each session belongs to exactly one user.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the daily active user count for a period of 30 days ending 2019-07-27 inclusively. A user was active on someday if they made at least one activity on that day.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "201bfff9-192f-4fed-84e9-bd35bfb6d747",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913b3ab8-f898-417f-ac1c-88ee808bf190",
+   "metadata": {},
+   "source": [
+    "NOTE: does not pass all test cases, not sure why... looking at the expected output, my first date is 1 day earlier than the expected result's earliest date. inclusivity error?\n",
+    "\n",
+    "    SELECT activity_date AS day, COUNT(DISTINCT(user_id)) AS active_users\n",
+    "    FROM Activity\n",
+    "    WHERE activity_date BETWEEN DATE_SUB('2019-07-27', INTERVAL 30 DAY) AND '2019-07-27'\n",
+    "    GROUP BY activity_date\n",
+    "\n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d9ca1ab-0103-408c-95ba-1dea8062e6ba",
+   "metadata": {},
+   "source": [
+    "NOTE: was just slightly off on my interval...\n",
+    "\n",
+    "    SELECT activity_date AS day, COUNT(DISTINCT(user_id)) AS active_users\n",
+    "    FROM Activity\n",
+    "    WHERE activity_date BETWEEN DATE_SUB('2019-07-27', INTERVAL 29 DAY) AND '2019-07-27'\n",
+    "    GROUP BY activity_date\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d284276-71f1-4163-a391-6505a248ed97",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c364ead7-b7e4-4505-8ca9-b4c078dd68d2",
+   "metadata": {},
+   "source": [
+    "modified some leetcode solution. pretty similar to mine but uses HAVING instead of a WHERE clause\n",
+    "\n",
+    "    SELECT activity_date AS day, COUNT(DISTINCT user_id) AS active_users\n",
+    "    FROM activity\n",
+    "    GROUP BY activity_date\n",
+    "    HAVING activity_date BETWEEN DATE_SUB('2019-07-27', INTERVAL 29 DAY) AND '2019-07-27'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9cd9759-7afb-4eb0-8003-2dfc5abf2262",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d887ab5-c131-45e6-b4bf-6a54257ca4e6",
+   "metadata": {},
+   "source": [
+    "used DATE_SUB again, but below is a list of all the date functions (would be useful to get familiar with some of them: DATE_ADD, for example, does the opposite of DATE_SUB):\n",
+    "\n",
+    "https://dev.mysql.com/doc/refman/8.4/en/date-and-time-functions.html#function_date-add\n",
+    "\n",
+    "COUNT(DISTINCT(column_name)) is new to me. works pretty intuitively: the count only increments when a new user_id is encountered (in my solution). here's where it might be useful:\n",
+    "* This helps you understand the diversity and uniqueness of data.\n",
+    "* The COUNT(DISTINCT) identifies and eliminates duplicate values in your data. This is useful for data cleaning and ensuring data accuracy.\n",
+    "* COUNT(DISTINCT) helps in getting this count or categorical data, you might want to know the number of unique categories or options available.\n",
+    "* COUNT(DISTINCT) helps in generating the number of unique occurrences of certain attributes to get accurate and informative reports.\n",
+    "* You can analyze membership in various groups or categories by counting the number of distinct members in each group.\n",
+    "* COUNT(DISTINCT) provides unique value counts for analysis and decision-making"
    ]
   },
   {
