--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -44,6 +44,7 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2768,6 +2769,103 @@
     "* COUNT(DISTINCT) helps in generating the number of unique occurrences of certain attributes to get accurate and informative reports.\n",
     "* You can analyze membership in various groups or categories by counting the number of distinct members in each group.\n",
     "* COUNT(DISTINCT) provides unique value counts for analysis and decision-making"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71b0e735-1451-432b-a736-f5ef9be6671d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1148. Article Views I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad1c7d89-3085-4863-b652-9a052aea83f3",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f0ba806-61dd-494d-8b9a-df5125363596",
+   "metadata": {},
+   "source": [
+    "Table: Views\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | article_id    | int     |\n",
+    "    | author_id     | int     |\n",
+    "    | viewer_id     | int     |\n",
+    "    | view_date     | date    |\n",
+    "    +---------------+---------+\n",
+    "There is no primary key (column with unique values) for this table, the table may have duplicate rows.\n",
+    "Each row of this table indicates that some viewer viewed an article (written by some author) on some date. \n",
+    "Note that equal author_id and viewer_id indicate the same person.\n",
+    " \n",
+    "\n",
+    "Write a solution to find all the authors that viewed at least one of their own articles.\n",
+    "\n",
+    "Return the result table sorted by id in ascending order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3378e3b0-c15a-4857-a8ca-dfc716978b44",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38061a40-1a11-4539-93a2-0758d6e59c8e",
+   "metadata": {},
+   "source": [
+    "    SELECT DISTINCT author_id as id \n",
+    "    FROM Views\n",
+    "    WHERE author_id = viewer_id\n",
+    "    ORDER BY author_id\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ea32e0e-f0b7-4a9e-b36d-f45708331e26",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22d801ff-e5a1-4d8c-bb31-410f64ae6762",
+   "metadata": {},
+   "source": [
+    "all the solutions are basically the same as mine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494f192e-95e5-4ac1-bed5-7e06c3e0312c",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a1b1bb3-1817-4f65-8cb8-094a1678bead",
+   "metadata": {},
+   "source": [
+    "nothing to add"
    ]
   },
   {
