--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -36,8 +36,9 @@
     "    1. COUNT(), SUM(), etc. before the grouping\n",
     "    2. GROUP BY itself\n",
     "    3. aggregations performed after the grouping - HAVING COUNT(), SUM(), etc.\n",
-    "2. study order of operations (which clauses come first, and which statements are performed first and why)\n",
-    "3. difference between a derived table and subquery? "
+    "2. study order of operations (which clauses come first, and which statements are performed first and why - are they all executed purely in sequence, or is that syntax?)\n",
+    "3. difference between a derived table and subquery? \n",
+    "4. maybe go over every problem and add some concept keywords in the title in order to make it easier to review certain topics (this should be done soon, as many concepts have been encountered so far, and some of them not very clear. understanding them would help solidify the foundation)"
    ]
   },
   {
@@ -2575,7 +2576,7 @@
     "NOTE: using LEFT JOIN as opposed to RIGHT JOIN made the difference between success and failure. still having bit of a hard time to visualize left vs right join (although \n",
     "straightforward...). i believe the 'left' table is the first one mentioned (right after the FROM clause) and the right on is the one being joined. makes sense for this example\n",
     "\n",
-    "NOTE: also for whatever reason, putting the NOT BETWEEN statement in parantheses caused a syntax error -> s.sale_date (NOT BETWEEN '2019-01-01' AND '2019-03-31' <- doesn't work\n",
+    "NOTE: also for whatever reason, putting the NOT BETWEEN statement in parantheses caused a syntax error -> s.sale_date (NOT BETWEEN '2019-01-01' AND '2019-03-31') <- doesn't work\n",
     "\n",
     "    SELECT product_id, product_name FROM Product\n",
     "    WHERE product_id NOT IN\n",
@@ -2866,6 +2867,170 @@
    "metadata": {},
    "source": [
     "nothing to add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53c5f626-3c9a-4cfd-a56e-e7cdd489fd4c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1179. Reformat Department Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6685b04e-c5d7-4323-8064-011743f2f056",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b127179e-14e2-4a9b-94d0-1239b9ecd162",
+   "metadata": {},
+   "source": [
+    "Table: Department\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | revenue     | int     |\n",
+    "    | month       | varchar |\n",
+    "    +-------------+---------+\n",
+    "In SQL,(id, month) is the primary key of this table.\n",
+    "The table has information about the revenue of each department per month.\n",
+    "The month has values in [\"Jan\",\"Feb\",\"Mar\",\"Apr\",\"May\",\"Jun\",\"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"].\n",
+    " \n",
+    "\n",
+    "Reformat the table such that there is a department id column and a revenue column for each month.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9fe4da5-a655-4ac3-8822-fe3d4336bd44",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c96467b-f1d7-41d3-a31f-ac7791b946da",
+   "metadata": {},
+   "source": [
+    "NOTE: first attempt i was just stumped... was looking into DECLARE to create some kind of date range and then looking into iterating through it while looking at the Department table to generate the columns, but then gave up on that when it looked like too much for an easy problem\n",
+    "\n",
+    "    DECLARE @StartDate date = \n",
+    "\n",
+    "    UPDATE Department\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3560a816-1569-4c9c-9c94-206d4690632a",
+   "metadata": {},
+   "source": [
+    "NOTE: foolishly tried to use a stackoverflow response that was for SQL server (our queries are meant to use MySQL). SQL server uses square brackets instead of backticks to delimit identifier, so i changed those, only to find out MySQL does not have a PIVOT keyword\n",
+    "\n",
+    "    SELECT id, `Jan`,`Feb`,`Mar`,`Apr`,`May`,`Jun`,`Jul`,`Aug`,`Sep`,`Oct`,`Nov`,`Dec`\n",
+    "    FROM Department\n",
+    "    PIVOT (revenue FOR month IN (`Jan`,`Feb`,`Mar`,`Apr`,`May`,`Jun`,`Jul`,`Aug`,`Sep`,`Oct`,`Nov`,`Dec`)\n",
+    "    ) pvt\n",
+    "\n",
+    "status = failure\n",
+    "\n",
+    "this is the query i tried copying:\n",
+    "\n",
+    "    SELECT  Project, [Jan 2014], [Feb 2014], [Mar 2014], [April 2014]\n",
+    "    FROM    T\n",
+    "            PIVOT\n",
+    "            (   SUM(MonthValues)\n",
+    "                FOR Months IN ([Jan 2014], [Feb 2014], [Mar 2014], [April 2014])\n",
+    "            ) pvt;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44017a3-c166-4096-9d4a-11f25aaaa5a9",
+   "metadata": {},
+   "source": [
+    "NOTE: this works, but there HAS to be a smarter way (also doesn't matter if you use SUM or MAX)\n",
+    "\n",
+    "    SELECT id,\n",
+    "    SUM(CASE WHEN month ='Jan' THEN revenue ELSE null END) AS Jan_Revenue,\n",
+    "    SUM(CASE WHEN month ='Feb' THEN revenue ELSE null END) AS Feb_Revenue,\n",
+    "    SUM(CASE WHEN month ='Mar' THEN revenue ELSE null END) AS Mar_Revenue,\n",
+    "    SUM(CASE WHEN month ='Apr' THEN revenue ELSE null END) AS Apr_Revenue,\n",
+    "    SUM(CASE WHEN month ='May' THEN revenue ELSE null END) AS May_Revenue,\n",
+    "    SUM(CASE WHEN month ='Jun' THEN revenue ELSE null END) AS Jun_Revenue,\n",
+    "    SUM(CASE WHEN month ='Jul' THEN revenue ELSE null END) AS Jul_Revenue,\n",
+    "    SUM(CASE WHEN month ='Aug' THEN revenue ELSE null END) AS Aug_Revenue,\n",
+    "    SUM(CASE WHEN month ='Sep' THEN revenue ELSE null END) AS Sep_Revenue,\n",
+    "    SUM(CASE WHEN month ='Oct' THEN revenue ELSE null END) AS Oct_Revenue,\n",
+    "    SUM(CASE WHEN month ='Nov' THEN revenue ELSE null END) AS Nov_Revenue,\n",
+    "    SUM(CASE WHEN month ='Dec' THEN revenue ELSE null END) AS Dec_Revenue\n",
+    "    FROM Department\n",
+    "    GROUP BY id\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0231b061-8821-43a1-996f-1c1f7e99813b",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "518de4d3-63f3-4bd2-86ec-bcc15edbd2e2",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution\n",
+    "\n",
+    "    SELECT\n",
+    "    Id,\n",
+    "    SUM(IF(month = 'Jan', revenue, null)) AS Jan_Revenue,\n",
+    "    SUM(IF(month = 'Feb', revenue, null)) AS Feb_Revenue,\n",
+    "    SUM(IF(month = 'Mar', revenue, null)) AS Mar_Revenue,\n",
+    "    SUM(IF(month = 'Apr', revenue, null)) AS Apr_Revenue,\n",
+    "    SUM(IF(month = 'May', revenue, null)) AS May_Revenue,\n",
+    "    SUM(IF(month = 'Jun', revenue, null)) AS Jun_Revenue,\n",
+    "    SUM(IF(month = 'Jul', revenue, null)) AS Jul_Revenue,\n",
+    "    SUM(IF(month = 'Aug', revenue, null)) AS Aug_Revenue,\n",
+    "    SUM(IF(month = 'Sep', revenue, null)) AS Sep_Revenue,\n",
+    "    SUM(IF(month = 'Oct', revenue, null)) AS Oct_Revenue,\n",
+    "    SUM(IF(month = 'Nov', revenue, null)) AS Nov_Revenue,\n",
+    "    SUM(IF(month = 'Dec', revenue, null)) AS Dec_Revenue\n",
+    "    FROM Department\n",
+    "    GROUP BY id;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c006d00d-5fb5-4b2d-89f0-58937f1643aa",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b02097c-afdf-4ade-8642-ef1d4b1027d0",
+   "metadata": {},
+   "source": [
+    "haven't found a non-verbose way of solving this problem. also looking at my solution and one of the leetcode solution i found, hard to tell if it's more appropriate to use CASE WHEN or IF, or what really is the difference between the two in this case"
    ]
   },
   {
