--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -38,7 +38,8 @@
     "    3. aggregations performed after the grouping - HAVING COUNT(), SUM(), etc.\n",
     "2. study order of operations (which clauses come first, and which statements are performed first and why - are they all executed purely in sequence, or is that syntax?)\n",
     "3. difference between a derived table and subquery? \n",
-    "4. maybe go over every problem and add some concept keywords in the title in order to make it easier to review certain topics (this should be done soon, as many concepts have been encountered so far, and some of them not very clear. understanding them would help solidify the foundation)"
+    "4. maybe go over every problem and add some concept keywords in the title in order to make it easier to review certain topics (this should be done soon, as many concepts have been encountered so far, and some of them not very clear. understanding them would help solidify the foundation)\n",
+    "5. need to look into how partitions work in more detail"
    ]
   },
   {
@@ -3031,6 +3032,144 @@
    "metadata": {},
    "source": [
     "haven't found a non-verbose way of solving this problem. also looking at my solution and one of the leetcode solution i found, hard to tell if it's more appropriate to use CASE WHEN or IF, or what really is the difference between the two in this case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6452ee84-ee4c-4906-a562-6acfc4268a0e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1211. Queries Quality and Percentage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa3dee0f-8f84-4703-ba81-4dd44aa0d17f",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3822d2d-b1a8-4adb-836d-97f9074df9b7",
+   "metadata": {},
+   "source": [
+    "Table: Queries\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | query_name  | varchar |\n",
+    "    | result      | varchar |\n",
+    "    | position    | int     |\n",
+    "    | rating      | int     |\n",
+    "    +-------------+---------+\n",
+    "This table may have duplicate rows.\n",
+    "This table contains information collected from some queries on a database.\n",
+    "The position column has a value from 1 to 500.\n",
+    "The rating column has a value from 1 to 5. Query with rating less than 3 is a poor query.\n",
+    " \n",
+    "\n",
+    "We define query quality as:\n",
+    "\n",
+    "The average of the ratio between query rating and its position.\n",
+    "\n",
+    "We also define poor query percentage as:\n",
+    "\n",
+    "The percentage of all queries with rating less than 3.\n",
+    "\n",
+    "Write a solution to find each query_name, the quality and poor_query_percentage.\n",
+    "\n",
+    "Both quality and poor_query_percentage should be rounded to 2 decimal places.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a42536-6593-4c8c-b770-0f57efe3bd08",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b6da36d-42c0-4409-86ae-724175b767d0",
+   "metadata": {},
+   "source": [
+    "NOTE: can get the first two column but missing poor_query_percentage\n",
+    "\n",
+    "    SELECT query_name, ROUND(AVG(rating / position), 2) AS quality\n",
+    "    FROM Queries\n",
+    "    GROUP BY query_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce056f4-22bf-4699-a0ca-d82a1457ea34",
+   "metadata": {},
+   "source": [
+    "    SELECT query_name, ROUND(AVG(rating / position), 2) AS quality, \n",
+    "    ROUND(SUM(IF(rating < 3, 1 , 0))/COUNT(query_name)*100,2) AS poor_query_percentage\n",
+    "    FROM Queries\n",
+    "    WHERE query_name IS NOT null\n",
+    "    GROUP BY query_name\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ea5ca7b-a314-4822-be4f-61cfbb667844",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cc280ec-b314-41c8-b3ae-a62d3479b7fc",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution. for the most part the approach is the same as mine but with slightly different operations\n",
+    "\n",
+    "    SELECT query_name, ROUND(AVG(CAST(rating AS decimal)/position), 2) AS quality,\n",
+    "    ROUND(SUM(CASE WHEN rating < 3 THEN 1 ELSE 0 end) * 100 / count(*), 2) AS poor_query_percentage\n",
+    "    FROM Queries\n",
+    "    GROUP BY query_name\n",
+    "    HAVING query_name IS NOT NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b165d496-980f-4c2b-96a7-121ce06ffc47",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f752da5-1ddb-4000-96c9-2a2d89bd667b",
+   "metadata": {},
+   "source": [
+    "for my solution, the part of the query that deals with poor_query_percentage is a bit confusing, here's my attempt to break it down:\n",
+    "\n",
+    "1. IF(rating < 3, 1, 0) -> first off we only want to consider the bad queries, those below a rating of 3\n",
+    "2. SUM(IF(rating < 3, 1, 0)) -> then we want the sum of all those bad queries, essentially acting as a count of bad queries\n",
+    "3. SUM(IF(rating < 3, 1, 0))/COUNT(query_name)*100 -> this now calculates the percentage of bad queries, using the count calculated in step 2. and the total count of queries (i believe all this works because of the GROUP BY)\n",
+    "4. ROUND(SUM(IF(rating < 3, 1, 0))/COUNT(query_name)*100 , 2) AS poor_query_percentage -> last step just rounds to 2 decimal places as asked by the question\n",
+    "\n",
+    "once again, unsure what the difference is between CASE and IF, seem to be operating the same. same thing for WHERE and HAVING, also seems to behaved the same. need to look into subtle differences, if there are any\n",
+    "\n",
+    "CAST()\n",
+    "* the CAST() function converts a value (of any type) into a specified datatype\n",
+    "* syntax -> CAST(value AS datatype)"
    ]
   },
   {
