--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -46,7 +46,6 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3170,6 +3169,151 @@
     "CAST()\n",
     "* the CAST() function converts a value (of any type) into a specified datatype\n",
     "* syntax -> CAST(value AS datatype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c66a6196-cb0e-43b8-bc4e-1084cdc7805f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1251. Average Selling Price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4cecab5-b883-41fc-a2ae-ba6034cfb323",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50e47e74-acf8-4c3b-8119-bb9c7104ba5f",
+   "metadata": {},
+   "source": [
+    "Table: Prices\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | product_id    | int     |\n",
+    "    | start_date    | date    |\n",
+    "    | end_date      | date    |\n",
+    "    | price         | int     |\n",
+    "    +---------------+---------+\n",
+    "(product_id, start_date, end_date) is the primary key (combination of columns with unique values) for this table.\n",
+    "Each row of this table indicates the price of the product_id in the period from start_date to end_date.\n",
+    "For each product_id there will be no two overlapping periods. That means there will be no two intersecting periods for the same product_id.\n",
+    " \n",
+    "\n",
+    "Table: UnitsSold\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | product_id    | int     |\n",
+    "    | purchase_date | date    |\n",
+    "    | units         | int     |\n",
+    "    +---------------+---------+\n",
+    "This table may contain duplicate rows.\n",
+    "Each row of this table indicates the date, units, and product_id of each product sold. \n",
+    " \n",
+    "\n",
+    "Write a solution to find the average selling price for each product. average_price should be rounded to 2 decimal places.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3bbb8c6-21ba-4318-8f7a-8c005d25e83a",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc25c57-a487-47fe-84e7-284329ec351a",
+   "metadata": {},
+   "source": [
+    "NOTE: very close to passing but misses an edge case where there is a product that exists in the Prices table but not in the UnitsSold table, in which case the average price should show up as 0 instead of not being there at all\n",
+    " \n",
+    "     SELECT product_id, ROUND(SUM(sales)/SUM(units), 2) AS average_price FROM (\n",
+    "        SELECT u.product_id, (p.price * u.units) AS sales, u.units FROM Prices p\n",
+    "        JOIN UnitsSold u ON p.product_id = u.product_id \n",
+    "        WHERE u.purchase_date BETWEEN p.start_date AND p.end_date\n",
+    "    ) s\n",
+    "    GROUP BY product_id\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db19fcac-c999-4bc8-8469-e5c1d3440eb7",
+   "metadata": {},
+   "source": [
+    "    SELECT product_id, IF(units IS NOT NULL, ROUND(SUM(sales)/SUM(units), 2), 0) AS average_price FROM (\n",
+    "        SELECT p.product_id, (p.price * u.units) AS sales, u.units FROM Prices p\n",
+    "        LEFT JOIN UnitsSold u ON p.product_id = u.product_id \n",
+    "        WHERE u.purchase_date BETWEEN p.start_date AND p.end_date OR u.units IS NULL\n",
+    "    ) s\n",
+    "    GROUP BY product_id\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f0c5d6b-d726-4731-85e1-5cb2dce9b55f",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aae4827c-c2a2-482c-8bf9-8746fac24f4e",
+   "metadata": {},
+   "source": [
+    "from a leetcode solution. seems to use the same idea as me but there is no subquery used because of two important things: 1. the sales are directly calculated in the average_price calculation 2. the join is made using product_id like i did but it uses an additional condition (which i didn't know you could use with ON) similar to my WHERE clause to preserve ranges that are logical.\n",
+    "\n",
+    "i am not sure how the IFNULL() works but this with the LEFT JOIN seem to have similar application as my solution with the u.units IS NULL + IF(units IS NOT NULL...) \n",
+    "\n",
+    "    SELECT p.product_id, IFNULL(ROUND(SUM(p.price*u.units)/SUM(u.units),2),0) AS average_price\n",
+    "    FROM Prices p \n",
+    "    LEFT JOIN UnitsSold u\n",
+    "    ON p.product_id = u.product_id AND \n",
+    "    u.purchase_date BETWEEN p.Start_date and p.end_date\n",
+    "    GROUP BY p.product_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07af6a3e-a4ec-4a47-a0ca-0af57cdce7c3",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08635d2c-cf27-4e0a-9f32-3a700edf9192",
+   "metadata": {},
+   "source": [
+    "explanation for the query in my attempt that succeeded...\n",
+    "\n",
+    "1. the subquery. in the subquery, the goal is to get a table with the sales made by each product for a given range (mutiplying the price by the units sold) as well as getting the product_id and the units which will be important for the outer query. the ranges are preserved as they should be using the WHERE clause and the BETWEEN operator (the output table is nonsensical without, and it is likely this query can be improved). it is important to also include the case where the units would be null (in the case that the product exists in the Product table but not in the UnitsSold table) in order to cover the egde case. \n",
+    "2. outer query. now that you have the product_id, sales, and units for each range you can now perform the necessary operation to get the average_price. here's a breakdown of how it is done:\n",
+    "    * ROUND(SUM(sales)/SUM(units), 2) -> this line, leveraging the GROUP BY, calculates the sum of sales and divides it by the sum of units to find the average price for a given product. this works because neither sales or units were agreggated earlier, only the sales made for those units within a certain range was calculated. the answer is also rounded since the question asks for it\n",
+    "    * IF(units IS NOT NULL, ROUND(SUM(sales)/SUM(units), 2) 0) -> the previous calculation is wrapped by an IF function. this is why it was important to include the OR statement in the WHERE clause in the subquery. if the units are not null, the operation is performed. otherwise, 0 is simply returned\n",
+    "    * GROUP BY product_id -> this is included so that the aggregations are performed correctly and the proper average price per product can be returned"
    ]
   },
   {
