--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -46,6 +46,7 @@
    "cell_type": "markdown",
    "id": "fc3b43ab-ebc7-4515-a103-913ec9f1284c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3314,6 +3315,138 @@
     "    * ROUND(SUM(sales)/SUM(units), 2) -> this line, leveraging the GROUP BY, calculates the sum of sales and divides it by the sum of units to find the average price for a given product. this works because neither sales or units were agreggated earlier, only the sales made for those units within a certain range was calculated. the answer is also rounded since the question asks for it\n",
     "    * IF(units IS NOT NULL, ROUND(SUM(sales)/SUM(units), 2) 0) -> the previous calculation is wrapped by an IF function. this is why it was important to include the OR statement in the WHERE clause in the subquery. if the units are not null, the operation is performed. otherwise, 0 is simply returned\n",
     "    * GROUP BY product_id -> this is included so that the aggregations are performed correctly and the proper average price per product can be returned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf0fd1f-1eb6-4296-8e73-4a8964e8ef34",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1280. Students and Examination*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20bf93bd-b995-422d-82c6-b7d3fb5055cd",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32071de5-d227-418c-9131-877fdaec32b3",
+   "metadata": {},
+   "source": [
+    "Table: Students\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | student_id    | int     |\n",
+    "    | student_name  | varchar |\n",
+    "    +---------------+---------+\n",
+    "student_id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains the ID and the name of one student in the school.\n",
+    " \n",
+    "\n",
+    "Table: Subjects\n",
+    "\n",
+    "    +--------------+---------+\n",
+    "    | Column Name  | Type    |\n",
+    "    +--------------+---------+\n",
+    "    | subject_name | varchar |\n",
+    "    +--------------+---------+\n",
+    "subject_name is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains the name of one subject in the school.\n",
+    " \n",
+    "\n",
+    "Table: Examinations\n",
+    "\n",
+    "    +--------------+---------+\n",
+    "    | Column Name  | Type    |\n",
+    "    +--------------+---------+\n",
+    "    | student_id   | int     |\n",
+    "    | subject_name | varchar |\n",
+    "    +--------------+---------+\n",
+    "There is no primary key (column with unique values) for this table. It may contain duplicates.\n",
+    "Each student from the Students table takes every course from the Subjects table.\n",
+    "Each row of this table indicates that a student with ID student_id attended the exam of subject_name.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the number of times each student attended each exam.\n",
+    "\n",
+    "Return the result table ordered by student_id and subject_name."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b285f1-d088-4b4e-b9d3-a6d4a9a0bcae",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f7484e0-04f6-4ecc-9f10-416d135c89e4",
+   "metadata": {},
+   "source": [
+    "NOTE: appears i was missing some tools to complete this problem - did not look really feasible without CROSS JOIN\n",
+    "\n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c5c6ac3-444a-4bf6-ba35-797976ede5a8",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1843c9c-6367-4a7d-94b4-68441d2da8f6",
+   "metadata": {},
+   "source": [
+    "there is a lot of variation in the answers unlike other problems, but most makes use of the CROSS JOIN operator. from a leetcode solution. makes use of the CROSS JOIN operator which creates a cartesian product, a LEFT JOIN, and uses a variety of grouping...\n",
+    "\n",
+    "    SELECT stu.student_id, stu.student_name, sub.subject_name, COUNT(exam.subject_name) AS attended_exams\n",
+    "    FROM Students AS stu\n",
+    "    CROSS JOIN Subjects AS sub\n",
+    "    LEFT JOIN Examinations AS exam\n",
+    "    ON exam.student_id = stu.student_id AND sub.subject_name = exam.subject_name\n",
+    "    GROUP BY\n",
+    "    stu.student_id, stu.student_name, sub.subject_name\n",
+    "    ORDER BY\n",
+    "    stu.student_id, sub.subject_name;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b3723c4-e781-42c8-8ac3-c89b7d0a729c",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f998d9f-336b-44ae-b156-9564e6cdfa2b",
+   "metadata": {},
+   "source": [
+    "explanation of the solution:\n",
+    "\n",
+    "* Cross Join: Combines every student with every subject, creating a list of all possible student-subject pairs.\n",
+    "* Left Join: Connects this list with the Examinations table to find which students have taken exams in which subjects.\n",
+    "* Grouping: Groups the results by student, subject, and counts the number of exams attended for each combination.\n",
+    "* Ordering: Sorts the results by student_id and then by subject_name for better readability.\n",
+    "\n",
+    "REVIEW & REVISE THIS: from my understanding you need to start with the Students table to have all the names (Alex does not take any exam but still needs to show 0 participation in each subject), followed by the CROSS JOIN with the subjects to create the cartesian product table, lastly joining the Examinations table to get the count. at this time not entirely sure how/why the GROUP BY works here"
    ]
   },
   {
