--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -3451,6 +3451,119 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03e23658-e977-4758-9a5b-7252116d0bcf",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1327. List the Products Ordered in a Period"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c726cdfa-4379-4f56-b2dc-764f478985da",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd8f1f1-0351-4851-ac1e-fcfa9162d40f",
+   "metadata": {},
+   "source": [
+    "Table: Products\n",
+    "\n",
+    "    +------------------+---------+\n",
+    "    | Column Name      | Type    |\n",
+    "    +------------------+---------+\n",
+    "    | product_id       | int     |\n",
+    "    | product_name     | varchar |\n",
+    "    | product_category | varchar |\n",
+    "    +------------------+---------+\n",
+    "product_id is the primary key (column with unique values) for this table.\n",
+    "This table contains data about the company's products.\n",
+    " \n",
+    "\n",
+    "Table: Orders\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | product_id    | int     |\n",
+    "    | order_date    | date    |\n",
+    "    | unit          | int     |\n",
+    "    +---------------+---------+\n",
+    "This table may have duplicate rows.\n",
+    "product_id is a foreign key (reference column) to the Products table.\n",
+    "unit is the number of products ordered in order_date.\n",
+    " \n",
+    "\n",
+    "Write a solution to get the names of products that have at least 100 units ordered in February 2020 and their amount.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8ecafc-845e-4e64-997a-dabbb4538e0d",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4b027c3-38bc-4533-89f7-84c698548f29",
+   "metadata": {},
+   "source": [
+    "NOTE: a bit confusing how the SUM() alias is also named unit (as requested from the question), what does the HAVING clause look at later on? original unit from the table or the SUM(unit) AS unit defined earlier? likely the latter otherwise this wouldn't work. tested and it's definitely the latter, the original unit column is not even recognized if i changed the aggregation alias to units instead\n",
+    "\n",
+    "    SELECT product_name, SUM(unit) AS unit FROM Orders \n",
+    "    JOIN Products USING(product_id)\n",
+    "    WHERE MONTH(order_date) = 2 AND YEAR(order_date) = 2020 \n",
+    "    GROUP BY product_id\n",
+    "    HAVING unit >= 100\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30ccaebe-662a-47e4-99f5-e8f6eaaa5e50",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39f992a2-4c3e-4bc0-bf72-10c279ac572a",
+   "metadata": {},
+   "source": [
+    "all the solutions appear very similar to mine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b86097af-ebf0-46a5-b606-892045af35ed",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ff07d12-d9ab-4525-b3cc-dd7ee4bee5a1",
+   "metadata": {},
+   "source": [
+    "* in my attempt, made use of new date functions. MONTH() which extracts the month from a date in numerical format, and YEAR() which does the same for the year\n",
+    "* at this time, a little unsure why the HAVING unit >= 100 is necessary. originally added another condition in the WHERE clause of unit >= 100 but that didn't work. i believe that the WHERE conditions is applied before the aggregation and therefore for each row, which is why it didn't work and we need to use HAVING, which is applied after the aggregation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
